--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,29 +1,21 @@
-name: Generate snake animation
-
+name: Generate Snake
 on:
-  schedule: # execute every 12 hours
+  schedule:
     - cron: "* */12 * * *"
-
   workflow_dispatch:
-
-  push:
-    branches:
-    - master
-
 jobs:
-  generate:
+  build:
+    name: Jobs to update the gif
     runs-on: ubuntu-latest
-
     steps:
-      - name: generate snake.svg
-        uses: Platane/snk/svg-only@v2
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg
+          github_user_name: shrutika2603
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
-
-      - name: push snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.6.0
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
